# category-tree

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
env/: app.dev.env  db.dev.env
scripts/db/: init-db.sh
scripts/entrypoints/: category_app.sh
src/: manage.py  pyproject.toml  setup.cfg
src/CategoryWeb/: settings.py  urls.py  wsgi.py
src/category/: apps.py  dtos.py  exceptions.py
src/category/api/base/: categories.py  category.py  router.py
src/category/api/base/serializers/: category.py
src/category/migrations/: 0001_initial.py
src/category/models/: category.py
src/category/repositories/: __init__.py  category.py
src/category/services/: __init__.py  category.py  mptt.py  utils.py
src/tests/unit/services/: conftest.py  test_mptt.py  test_utils.py
